feat: add charity links

--- a/index.html
+++ b/index.html
@@ -32,11 +32,22 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+        flex-direction: column;
+      }
+      a {
+          color: white;
       }
     </style>
   </head>
   <body>
     <div class="blue text">
+      <nav>
+        <a href="https://armysos.com.ua/en/">Army SOS</a>
+        <a href="https://savelife.in.ua/donate/">Save Life</a>
+        <a href="https://www.donbasssos.org/en/">Donbass SOS</a>
+        <a href="https://krymsos.com">Krym SOS</a>
+        <a href="https://www.facebook.com/hospitallers/">Hospitallers</a>
+      </nav>
       <h1>Русский корабль,</h1>
     </div>
     <div class="yellow text"><h1>иди нах@й</h1></div>
