feat: add ukraines bank account

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   </head>
   <body>
     <div class="blue text">
+      <nav>
+        <a href="https://bank.gov.ua/en/news/all/natsionalniy-bank-vidkriv-spetsrahunok-dlya-zboru-koshtiv-na-potrebi-armiyi">Ukrain Bank Donations</a>
+      </nav>
       <h1>Русский корабль,</h1>
     </div>
     <div class="yellow text">
