feat: use NBU in link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <body>
     <div class="blue text">
       <nav>
-        <a href="https://bank.gov.ua/en/news/all/natsionalniy-bank-vidkriv-spetsrahunok-dlya-zboru-koshtiv-na-potrebi-armiyi">Ukrain Bank Donations</a>
+        <a href="https://bank.gov.ua/en/news/all/natsionalniy-bank-vidkriv-spetsrahunok-dlya-zboru-koshtiv-na-potrebi-armiyi">National Bank of Ukraine</a>
       </nav>
       <h1>Русский корабль,</h1>
     </div>
